log
Thu 18 Aug 2022 01:06:54 AM UTC: 
 tests:  0|6
total_score: 0/70
9011fc6
Thu 18 Aug 2022 01:22:35 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6e7e786
Thu 18 Aug 2022 01:34:54 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   39 |   if (!list -> head)
      |   ^~
list.c:41:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   41 |     return (list->head->data);
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4844c86
Thu 18 Aug 2022 01:48:32 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
bb92d4b
Thu 18 Aug 2022 01:49:13 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0751387
Thu 18 Aug 2022 01:49:53 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cb33397
Thu 18 Aug 2022 01:51:37 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:28: error: expected ‘;’ before ‘}’ token
   42 |   return (list->head->data)
      |                            ^
      |                            ;
   43 | }
      | ~                           
Compilation failed
ce3844a
Thu 18 Aug 2022 01:51:44 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e7ba282
Thu 18 Aug 2022 01:52:41 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
6dfb84a
Thu 18 Aug 2022 02:06:01 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
6f329e6
Thu 18 Aug 2022 02:07:25 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
9ebdb56
Sat 20 Aug 2022 02:36:39 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
5c05ee8
Sat 20 Aug 2022 02:42:06 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
a842c90
Sat 20 Aug 2022 02:45:43 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:82:9: error: unused variable ‘nodo’ [-Werror=unused-variable]
   82 |   Node *nodo = createNode(data);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
94caffe
Sat 20 Aug 2022 02:46:00 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
efaadb8
Sat 20 Aug 2022 02:50:52 AM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:91:6: error: ‘aux’ undeclared (first use in this function)
   91 |   if(aux->next == NULL) list->tail = nodo;
      |      ^~~
list.c:91:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d8c1069
Sat 20 Aug 2022 02:51:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
5df9cc4
